feat(correctness): add verified studio demo